Fix z-index bug in status styling

--- a/components/testFirebase/firebase.module.scss
+++ b/components/testFirebase/firebase.module.scss
@@ -153,7 +153,7 @@
   position: absolute;
   top: 12px;
   left: 13px;
-  z-index: 100;
+  z-index: 1;
   padding: 4px 9px;
   border-radius: 10px;
   transition: 0.2s all;
